syntax = "proto3";

package grpc;

option go_package = "pkg/grpc";
service NotificationService {
  rpc SendRegistrationNotification(AuthNotificationRequest) returns (SendNotificationResponse);
  rpc SendLoginNotification(AuthNotificationRequest) returns (SendNotificationResponse);
  rpc SendUserNotification(UserNotificationRequest) returns (SendNotificationResponse);
}

enum NotificationType {
  NOTIFICATION_TYPE_UNKNOWN = 0;
  REGISTRATION = 1;
  LOGIN = 2;
  INVESTMENT_SUCCESS = 3;
  INVESTED_IN_YOU = 4;
  OTHER = 5;
}

enum NotificationChannel {
  NOTIFICATION_CHANNEL_UNKNOWN = 0;
  EMAIL = 1;
  WEB = 2;
}

message AuthNotificationRequest {
  uint64 user_id = 1;
  string email = 2; // email пользователя
  string name = 3; // имя пользователя
}

message UserNotificationRequest {
  uint64 user_id = 1; // Инвестор
  string email = 2; // email пользователя
  string name = 3; // имя пользователя
  NotificationType type = 4; // тип уведомления
  repeated NotificationChannel channels = 5; // EMAIL и WEB
  map<string, string> metadata = 6; // subject, body, url

}

message SendNotificationResponse {
  bool success = 1;
  string error = 2;
}